--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Логическа игра</title>
 </head>
 <body>
+
+    <p id="expression"></p>
     
+
+    <script src="script.js"></script>
 </body>
 </html>
