Change position table and some small fix

--- a/Index.html
+++ b/Index.html
@@ -18,9 +18,11 @@
         <table id="table-task"> </table>
       </div>
       <div class="col">
+        Ei tuka KODA DETO SHTE PRASKA!!!
+      </div>
+      <div class="col">      
         <div class="table-container"> 
-          <div id="container">
-            
+          <div id="container">            
             <div id="table-container">
               <table>
                 <tbody id="letters-container"></tbody>
@@ -28,9 +30,6 @@
             </div>
           </div>    
         </div>
-      </div>
-      <div class="col">
-        Column
       </div>
     </div>
   </div>
