--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <title>Логическа игра</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body>  
 
   <div id="slider-container">
     <input type="range" id="scale-slider" min="0.5" max="2" step="0.1" value="1" />
@@ -18,7 +18,7 @@
         <table id="table-task"> </table>
       </div>
       <div class="col">
-        Ei tuka KODA DETO SHTE PRASKA!!!
+        <button onclick="showList()">Списък</button>
       </div>
       <div class="col">      
         <div class="table-container"> 
@@ -30,12 +30,13 @@
             </div>
           </div>    
         </div>
-      </div>
-    </div>
+      </div>        
+    </div>   
   </div>
- 
 
- 
+  <div class="form-group">
+    <textarea class="fixed-bottom" id="exampleFormControlTextarea1" rows="5" placeholder="Може да се пише тука!"></textarea>
+  </div>
            
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
