--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,19 @@
         <table id="table-task"> </table>
       </div>
       <div class="col">
-        <button onclick="showList()">Списък</button>
+        
+        <!-- <div class="fields">
+          <input type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
+        </div>   -->
+        <div class="fields">
+          <table id="table2-task"> </table>
+          <!-- <button id="addInput">Добави поле</button> -->
+        </div>
+             
       </div>
       <div class="col">      
         <div class="table-container"> 
@@ -31,8 +43,10 @@
           </div>    
         </div>
       </div>        
-    </div>   
+    </div>  
+    <button onclick="showList()">Списък</button> 
   </div>
+
 
   <div class="form-group">
     <textarea class="fixed-bottom" id="exampleFormControlTextarea1" rows="10" placeholder="Може да се пише тука!"></textarea>
