Fix showList and some more

--- a/Index.html
+++ b/Index.html
@@ -53,8 +53,7 @@
 
   <div class="form-group" style="position: relative;">
     <textarea class="fixed-bottom" id="Textarea" rows="10" placeholder="Може да се пише тука! За изпълнение на команди точния текст трябва да е маркиран!
-Да се преправи Z индекса на обектите и ще се оправи кликането навсякъде в текст ареа полето. Има бъг при сметка на 9 цифрено с 9 цифрено число.
-Списакът с букви към цифри показва винаги по 10 неща, а не само използваните."></textarea>   
+Да се преправи Z индекса на обектите и ще се оправи кликането навсякъде в текст ареа полето. Има бъг при сметка на 9 цифрено с 9 цифрено число."></textarea>   
   </div>
            
   <script src="script.js"></script>
