--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <form class="form-inline">
       <button class="btn btn-outline-success" type="button" onclick="reloadGame()">Нова задача</button>
       <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showList()" data-toggle="tooltip" data-placement="bottom" title="showList">Списък</button>
-      <button class="btn btn-sm btn-outline-secondary" type="button">Решение</button>
+      <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showSolution()">Решение</button>
       <button class="btn btn-sm btn-outline-secondary" type="button">Запамети</button>
       <button class="btn btn-sm btn-outline-secondary" type="button">Зареди</button>
     </form>
