Adding Save / Load. Need some fix

--- a/Index.html
+++ b/Index.html
@@ -13,8 +13,8 @@
       <button class="btn btn-outline-success" type="button" onclick="reloadGame()">Нова задача</button>
       <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showList()" data-toggle="tooltip" data-placement="bottom" title="showList">Списък</button>
       <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showSolution()">Решение</button>
-      <button class="btn btn-sm btn-outline-secondary" type="button">Запамети</button>
-      <button class="btn btn-sm btn-outline-secondary" type="button">Зареди</button>
+      <button class="btn btn-sm btn-outline-secondary" type="button" onclick="saveGame()">Запамети</button>
+      <button class="btn btn-sm btn-outline-secondary" type="button" onclick="loadGame()">Зареди</button>
     </form>
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="margin-left: auto;" onclick="executeCommand()">Стартираи кода от текст полето</button>
   </nav> 
