--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,7 @@
       <button class="btn btn-sm btn-outline-secondary" type="button" onclick="saveGame()">Запамети</button>
       <button class="btn btn-sm btn-outline-secondary" type="button" onclick="loadGame()">Зареди</button>
     </form>
+    <button class="btn btn-sm btn-outline-secondary" type="button" style="margin-left: auto;" onclick="clearTable()">Изчисти таблицата</button>
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="margin-left: auto;" onclick="executeCommand()">Стартираи кода от текст полето</button>
   </nav> 
 
