--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>Логическа игра</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body> 
   <nav class="navbar navbar-light bg-light">
@@ -16,9 +17,12 @@
       <button class="btn btn-sm btn-outline-secondary" type="button" onclick="saveGame()">Запамети</button>
       <button class="btn btn-sm btn-outline-secondary" type="button" onclick="loadGame()">Зареди</button>
     </form>
+    <div id="timer" style="margin-left: auto;">00 : 00 : 00</div>
     <button class="btn btn-sm btn-outline-secondary" type="button" style="margin-left: auto;" onclick="clearTable()">Изчисти таблицата</button>
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="margin-left: auto;" onclick="executeCommand()">Стартираи кода от текст полето</button>
   </nav> 
+
+ 
 
   <div id="slider-container">
     <input type="range" id="scale-slider" min="0.5" max="2" step="0.1" value="1" />
@@ -55,8 +59,8 @@
   <div class="form-group" style="position: relative;">
     <textarea class="fixed-bottom" id="Textarea" rows="10" placeholder="Може да се пише тука! За изпълнение на команди точния текст трябва да е маркиран!
 Да се преправи Z индекса на обектите и ще се оправи кликането навсякъде в текст ареа полето. Има бъг при сметка на 9 цифрено с 9 цифрено число."></textarea>   
-  </div>
-           
+  </div>    
+
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
